--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Pirates Invasion</title>
+    <title>EPIC ARCHERY</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-    <script src="./lib/p5.gif.min.js"></script>
+   
     <script src="./lib/matter.js"></script>
     <!-- Sweet Alert -->
     <script
@@ -19,11 +19,13 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script src="./js/Ground.js"></script>
-    <script src="./js/Tower.js"></script>
-    <script src="./js/Cannon.js"></script>
-  
-   
+    <script src="js/PlayerBase.js"></script>
+    <script src="js/ComputerBase.js"></script>
+
+    <script src="js/Player.js"></script>
+    <script src="js/Computer.js"></script>
+
+    
   </head>
   <body>
     <script src="sketch.js"></script>
